# tradingview-rs

./: .env.example  .gitignore  .gitmodules  CODE_OF_CONDUCT.md  Cargo.toml  Dockerfile  Justfile  LICENSE  Makefile  README.md  SECURITY.md  Vagrantfile  docker-compose.yml  justfile  sonar-project.properties
.cargo/: config.toml
.github/: FUNDING.yml  dependabot.yml
.github/ISSUE_TEMPLATE/: bug-report.yml
.github/workflows/: ci.yml  clean-jobs.yml  credential-check.yml  dast.yml  publish.yml  qa.yml  rust-clippy.yml  sast.yml  security-audit.yml  sonar-scan.yml
.test_data/: pipe-facade.candlestick.json  pipe-facade.json
benches/: utils.rs
benches/data/: mod.rs
datafeed/: Cargo.toml
datafeed/examples/: auth.rs  utils.rs  websocket.rs
datafeed/src/: auth.rs  client.rs  lib.rs  main.rs  misc_requests.rs
datafeed/src/quote/: models.rs
datafeed/src/utils/: mod.rs  protocol.rs
datafeed/tests/: auth_test.rs  misc_request_test.rs  utils_test.rs
datafeed/tests/.test_data/: invalid_credential.json  pipe-facage.data.json
datafeed/tests/data/: socket_messages.txt
docs/: pine-facade.md
examples/: all copy.rs  all.rs  chart.rs  client.rs  csv_export.rs  fetch_historical_data_batch.rs  fundamental.rs  historical_data.rs  historical_data_batch.rs  historical_data_with_replay.rs  indicator.rs  indicator.rs.bak  intraday_data.rs  live.rs  load_all_intraday_data.rs  misc.rs  pine_intput.rs  quote.rs  replay.rs  replay.rs.bak  search.rs  session_clone.rs  shared_session.rs  study.rs  user.rs  websocket.rs
requests/: pine-facade.http  pine-facade.md
scripts/: scan.sh
server/: Cargo.toml
src/: auth.rs  callback.rs  client.rs  data_loader.rs  error.rs  errors.rs  feeder.rs  lib.rs  main.rs  misc_requests.rs  model.rs  models.rs  observer.rs  prelude.rs  session.rs  socket.rs  subscriber.rs  user.rs  utils.rs  websocket.rs
src/chart/: data.rs  graphic_parser.rs  mod.rs  models.rs  options.rs  session.rs  study.rs  ta.rs  utils.rs  websocket.rs
src/chart/data/: mod.rs
src/chart/history/: batch.rs  mod.rs  single.rs
src/client/: collector.rs  fundamental.rs  mics.rs  misc.rs  mod.rs  news.rs  websocket.rs
src/data/: mod.rs  models.rs
src/handler/: command.rs  event.rs  message.rs  mod.rs  types.rs
src/historical/: batch.rs  mod.rs  single.rs
src/lib/: lib.rs
src/lib/quote/: models.rs
src/lib/utils/: protocol.rs
src/live/: mod.rs  models.rs  websocket.rs
src/live/handler/: command.rs  data.rs  event.rs  message.rs  mod.rs  types.rs
src/model/: mod.rs
src/models/: mod.rs  news.rs  pine_indicator.rs
src/quote/: client.rs  mod.rs  model.rs  models.rs  session.rs  utils.rs  websocket.rs  websocket.rs.bak
src/utils/: http_client.rs  mod.rs
tests/: Cargo.toml  auth_test.rs  client_test.rs  misc_test.rs  oauth2.py  user_test.rs  utils_test.rs
tests/.test_data/: auth_socket.json  chart_drawing.json  invalid_totp.json  login-otp.res.json  login.js  user-login.json
tests/data/: auth_socket.json  chart_du.json  events.json  pipe-facade.stantard.json  time_scale_update.json  ws.js
tests/socketio-server/: package-lock.json  package.json
tests/src/: main.rs
