[package]
name = "tradingview-rs"
authors = ["Nguyen Thanh Dat <dat.nguyen@bitbytelab.io>"]
version = "0.0.1"
edition = "2021"
license = "MIT"
repository = "https://github.com/bitbytelabio/tradingview-rs"
readme = "README.md"
description = "Tradingview datafeed api `tradingview-rs` project."
resolver = "2"

[lib]
name = "tradingview"
path = "src/lib.rs"

[features]
default = ["user"]
user = ["dep:google-authenticator"]
protobuf = ["dep:prost"]
sqlx = []

[dependencies]
async-trait = "0.1" # Remove this when Rust 1.75 async trait is stable
tokio = { version = "1", default-features = false, features = ["rt", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
reqwest = { version = "0.12", features = ["rustls-tls", "json", "cookies"] }
lazy_static = "1.4"
url = "2"
urlencoding = "2"
rand = "^0.8"
regex = "1"
tokio-tungstenite = { version = "0.21", features = ["rustls-tls-webpki-roots"] }
tracing = "0.1"
thiserror = "1"
futures-util = { version = "0.3", default-features = false, features = [
    "sink",
    "std",
] }
iso_currency = { version = "0.4", features = ["with-serde"] }
zip = "2.1"
base64 = "0.22"
google-authenticator = { version = "0.4", optional = true }
prost = { version = "0.12", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
criterion = { version = "0.5", features = ["html_reports"] }
anyhow = "1"
dotenv = "0.15.0"
tracing-subscriber = "0.3"
chrono = { version = "0.4.31", features = ["serde"] }

# [[bench]]
# harness = false
# name = "utils"
