[package]
name = "tradingview-rs"
authors = ["Nguyen Thanh Dat <dat.nguyen@bitbytelab.io>"]
version = "0.0.4"
edition = "2024"
license = "MIT"
repository = "https://github.com/bitbytelabio/tradingview-rs"
readme = "README.md"
description = "Tradingview datafeed api `tradingview-rs` project."
resolver = "2"

[lib]
name = "tradingview"
path = "src/lib.rs"

[features]
default = ["user", "rustls-tls"]
user = ["dep:google-authenticator"]
protobuf = ["dep:prost"]
native-tls = ["reqwest/native-tls", "tokio-tungstenite/native-tls"]
rustls-tls = ["reqwest/rustls-tls", "tokio-tungstenite/rustls-tls-webpki-roots"]

[dependencies]
async-trait = "0.1"
tokio = { version = "1", default-features = false, features = ["rt", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "cookies",
] }
lazy_static = "1"
chrono = { version = "0.4", features = ["serde"] }
url = "2"
urlencoding = "2"
rand = "0.9"
regex = "1"
tokio-tungstenite = { version = "0.27", features = ["url"] }
tracing = "0.1"
thiserror = "2"
futures-util = { version = "0.3", default-features = false, features = [
    "sink",
    "std",
] }
iso_currency = { version = "0.5", features = ["with-serde"] }
zip = "4"
base64 = "0.22"
google-authenticator = { version = "0.4", optional = true }
prost = { version = "0.14", optional = true }
bon = "3"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
criterion = { version = "0.6", features = ["html_reports"] }
anyhow = "1"
dotenv = "0.15"
tracing-subscriber = "0.3"
chrono = { version = "0.4", features = ["serde"] }
colored = "3"

# [[bench]]
# harness = false
# name = "utils"
