[package]
name = "datafeed"
authors = ["Bit Byte Lab Developers <dev.team@bitbytelab.io>"]
version = "0.0.1"
edition = "2021"
license = "MIT"
repository = "https://github.com/bitbytelabio/tradingview-rs"
readme = "../README.md"
description = "Tradingview datafeed api `tradingview-rs` project."

[dependencies]
reqwest = { version = "0.11", features = [
    "rustls-tls",
    "json",
    "blocking",
    "gzip",
    "deflate",
    "cookies",
    "multipart",
] }
tracing = "0.1"
tracing-subscriber = "0.3"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
rand = "0.8"
serde_json = { version = "1.0" }
regex = "1"
google-authenticator = "0.4"
lazy_static = "1.4"

[[example]]
name = "auth"
