[package]
name = "datafeed"
authors = ["Bit Byte Lab Developers <dev.team@bitbytelab.io>"]
version = "0.0.1"
edition = "2021"
license = "MIT"
repository = "https://github.com/bitbytelabio/tradingview-rs"
readme = "../README.md"
description = "Tradingview datafeed api `tradingview-rs` project."

[dependencies]
tracing = "0.1"
tracing-subscriber = "0.3"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1.0" }
regex = "1"

# HTTP Client
reqwest = { version = "0.11", features = [
    "rustls-tls",
    "json",
    "blocking",
    "gzip",
    "deflate",
    "cookies",
    "multipart",
] }
google-authenticator = "0.4"
rand = "0.8"
lazy_static = "1.4"
url = "2.3.1"
http = "0.2.9"
tungstenite = "0.19"
tokio-tungstenite = { version = "0.19", features = ["native-tls"] }

futures-util = { version = "0.3", default-features = false, features = [
    "sink",
    "std",
] }
futures-channel = "0.3"

[[example]]
name = "auth"

[[example]]
name = "websocket"
