[package]
name = "tests"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = { version = "1.0" }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
rust_socketio = "0.4.1"
tracing = "0.1"
tracing-subscriber = "0.3"
